# pgn2anki

./: GIU.py~  README.md  anki-pgn.py  pyproject.toml
App/templates/: index.html
Beta/: pgn_travel.py
Decks/: DonaldByrne_vs_RobertJamesFischer.apkg  JuditPolgar_vs_FerencBerkes.apkg
GUI/: main.py  simple.py~  tk.py
PGNs/: gelfand_nakamura_2010.pgn  morphy_duke_karl_count_isouard_1858.pgn  study.pgn
src/: anki-pgn.py
src/App/: anki2pgn.py
src/GUI/: simple.py
src/beta/: pgn_travel.py
src/beta/app/: app.py
src/pgn2anki/: __init__.py  __main__.py
src/pgn2anki.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/decks/: BorisGelfand_vs_HikaruNakamura.apkg  MagnusCarlsen_vs_RichardRapport.apkg  ankipgn.apkg
tests/pgns/: carlsen_rapport_2022.pgn
