# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgn2anki"
version = "1.0.2"
description = "Convert chess PGN into Anki deck"
readme = "README.md"
authors = [{ name = "Meni Sadigurschi", email = "menisadi@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chess", "anki", "pgn"]
dependencies = [
    "chess",
    "genanki",
    "beautifulsoup4",
    "numpy",
    "tomli",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/menisadi/pgn2anki"

[project.scripts]
pgn2anki = "pgn2anki.__main__:main"

[tool.bumpver]
current_version = "1.0.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/pgn2anki/__init__.py" = ["{version}"]
